--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
-version: '3.7'
-
 services:
 
   gotify-telegram:
-    image: gotify-telegram
-    container_name: gotify-telegram
+    image: gotify-telegram-reflector
+    container_name: gotify-telegram-reflector
     restart: unless-stopped
     environment:
-      - GOTIFY_URL=<URL>
-      - GOTIFY_PORT=<HTTP PORT>
-      - GOTIFY_CLIENT_TOKEN=<CLIENT TOKEN>
-#      - GOTIFY_APP_TOKEN=<>
-      - TELEGRAM_CHAT_ID=<TELEGRAM CHAT ID>
-      - TELEGRAM_TOKEN=<TOKEN_HERE>
-      
+      - GOTIFY_URL=gotify.server
+      - GOTIFY_CLIENT_TOKEN=654321
+      - TELEGRAM_CHAT_ID=123456
+      - TELEGRAM_TOKEN=123456789:AAsdfgsdfg-SDFHsdfhsdfhdsfh
